--- a/google_assistant/rootfs/etc/services.d/google-assistant/public/css/style.css
+++ b/google_assistant/rootfs/etc/services.d/google-assistant/public/css/style.css
@@ -1,13 +1,13 @@
 body {
-  background-color: #fafafa;
   font-family: 'Roboto', sans-serif;
+  background-color: #fafafa;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .card {
-  box-shadow: var( --ha-card-box-shadow, 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2) );
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
   color: #212121;
   border-radius: 2px;
